# DoTool

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.7476ebd  CMakeLists.txt.user.83c87a0  README.md
pack/: .gitignore  binarycreator.py  copybin.py  repogen.py  repogen_update.py
pack/config/: config.xml  style.qss
rc/: dotool.rc
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/qtscrcpy/: CMakeLists.txt
src/qtscrcpy/adb/: adbprocess.cpp  adbprocess.h
src/qtscrcpy/device/controller/: controller.cpp
src/qtscrcpy/device/controller/inputconvert/: controlmsg.h
src/qtscrcpy/device/controller/receiver/: receiver.cpp
src/qtscrcpy/device/server/: server.cpp  server.h
src/qtscrcpy/device/stream/: stream.cpp
src/qtscrcpy/util/: bufferutil.cpp  bufferutil.h
src/qtscrcpy/util/mousetap/: winmousetap.cpp
src/ui/: BBDownloaderController.cpp  BBDownloaderController.h  CMakeLists.txt  ColorFinderController.cpp  ColorFinderController.h  ColorPickerController.cpp  ColorPickerController.h  Extractor.cpp  Extractor.h  FaceController.cpp  FaceController.h  FrameProvider.cpp  FrameProvider.h  GlobalStatic.cpp  GlobalStatic.h  I420Render.cpp  I420Render.h  ItemImage.cpp  ItemImage.h  ItemOpenGL.cpp  ItemOpenGL.h  JsonParserController.cpp  JsonParserController.h  MainWindow.cpp  MainWindow.h  Network.cpp  Network.h  OpencvController.cpp  OpencvController.h  PackController.cpp  PackController.h  PhoneController.cpp  PhoneController.h  QLogHelper.cpp  QLogHelper.h  QUIHelper.cpp  QUIHelper.h  QrCode.cpp  QrCode.h  ScrcpyController.cpp  (+12 more)
src/ui/res/: qml.qrc
src/ui/res/component/: CusButton.qml  CusLineEditArea.qml  CusMenu.qml  CusMenuBar.qml  CusMenuBarItem.qml  CusMenuItem.qml  CusSliderBar.qml  CusToolBar.qml  CusToolButton.qml  CusWindow.qml  CusWindow2.qml  ItemSelectArea.qml
src/ui/res/global/: global.js
src/ui/res/layout/: MainAbout.qml  MainHome.qml  MainSetting.qml  MainTool.qml  ToolBBDownloader.qml  ToolColorPicker.qml  ToolJsonParser.qml  ToolQrcode.qml  ToolUrlDecode.qml  main.qml
src/ui/res/storage/: Router.qml  Theme.qml  ToolData.qml
src/ui/res/third/colorpicker/: ColorPicker.qml
src/ui/res/tool-base64/: ToolBase64.qml
src/ui/res/tool-bbdownloader/: Download.qml  DownloadPopup.qml  File.qml  Setting.qml  ToolBBDownloader.qml
src/ui/res/tool-camera/: Effect.qml  EffectBillboard.qml  ToolCamera.qml
src/ui/res/tool-colorpicker/: ToolColorFinder.qml  ToolColorPicker.qml
src/ui/res/tool-digest/: ToolDigest.qml
src/ui/res/tool-face/: ToolFace.qml
src/ui/res/tool-jsonparser/: ToolJsonParser.qml
src/ui/res/tool-markdown/: ToolMarkdown.qml
src/ui/res/tool-opencv/: ToolOpencv.qml
src/ui/res/tool-opengl/: ToolOpengl.qml
src/ui/res/tool-pack/: ToolPack.qml
src/ui/res/tool-qrcode/: ToolQrcode.qml
src/ui/res/tool-scrcpy/: LayoutDeviceOptions.qml  PhoneWindow.qml  ToolScrcpy.qml
src/ui/res/tool-screencapture/: ToolScreenCapture.qml
src/ui/res/tool-urldecode/: ToolUrlDecode.qml
src/ui/res/tools/colorpicker/: ColorPicker.qml
src/ui/res/webview/: WebPage.qml
third/frameless/lib/win64/: FramelessHelper.lib
third/frameless/lib/win64/debug/: FramelessHelperd.lib
third/glog/lib/win64/debug/: glogd.lib
third/glog/lib/win64/release/: glog.lib
third/hotkey/lib/win64/: qhotkey.lib  qhotkeyd.lib
third/opencv/lib/win64/: opencv_calib3d455.lib  opencv_core455.lib  opencv_dnn455.lib  opencv_features2d455.lib  opencv_flann455.lib  opencv_gapi455.lib  opencv_highgui455.lib  opencv_imgcodecs455.lib  opencv_imgproc455.lib  opencv_ml455.lib  opencv_objdetect455.lib  opencv_photo455.lib  opencv_stitching455.lib  opencv_video455.lib  opencv_videoio455.lib
third/zxing/lib/win64/debug/: QZXing3.lib
third/zxing/msvc/lib/: QZXing3.lib
